@@ -3,13 +3,13 @@ package ru.practicum.shareit.validator;
 import jakarta.validation.ConstraintValidator;
 import jakarta.validation.ConstraintValidatorContext;
 
-public class NameValidator implements ConstraintValidator<ValidName, String> {
+public class StringValidator implements ConstraintValidator<ValidString, String> {
 
     @Override
     public boolean isValid(String name, ConstraintValidatorContext context) {
         if (name == null) {
             return true;
         }
-        return !name.trim().isEmpty();
+        return !name.trim().isEmpty() || !name.isBlank();
     }
 }
